--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,13 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/app/api/trade-conditions/trade-conditions-v2.json"
+  ],
   "exclude": ["node_modules"]
 }
+
